--- a/src/app/pages/new-game/new-game.page.html
+++ b/src/app/pages/new-game/new-game.page.html
@@ -20,7 +20,8 @@
         <ion-label translate>profile</ion-label>
         <ion-note>{{baseProfile.predefined ? (baseProfile.name | translate) : baseProfile.name}}</ion-note>
       </div>
-      <ion-select [(ngModel)]="baseProfile" (ionChange)="onProfileChange()" slot="end" selectedText="&nbsp;">
+      <ion-select [(ngModel)]="baseProfile" (ionChange)="onProfileChange()" slot="end" selectedText="&nbsp;"
+        [interfaceOptions]="{ cssClass: 'wide-select' }">
         <ion-select-option *ngFor="let profile of allProfiles" [value]="profile">
           {{profile.predefined ? (profile.name | translate) : profile.name}}
         </ion-select-option>
@@ -77,7 +78,8 @@
           <ion-note translate [translateParams]="{ num: bonusCards.length }">bonus-cards-description</ion-note>
         </div>
         <ion-select name="bonusCards" [(ngModel)]="bonusCards" slot="end" selectedText="&nbsp;" multiple="true"
-          appBonusCardsValidator [numPlayers]="numPlayers" #bonusCardsSelect="ngModel">
+          appBonusCardsValidator [numPlayers]="numPlayers" #bonusCardsSelect="ngModel"
+          [interfaceOptions]="{ cssClass: 'grid-select' }">
           <ion-select-option *ngFor="let bonusCard of allBonusCards" [value]="bonusCard" translate>
             {{bonusCard.description}}
           </ion-select-option>
@@ -95,7 +97,8 @@
           <ion-note translate [translateParams]="{ num: scoringTiles.length }">scoring-tiles-description</ion-note>
         </div>
         <ion-select name="scoringTiles" [(ngModel)]="scoringTiles" slot="end" selectedText="&nbsp;" multiple="true"
-          appScoringTilesValidator #scoringTilesSelect="ngModel">
+          appScoringTilesValidator #scoringTilesSelect="ngModel"
+          [interfaceOptions]="{ cssClass: 'grid-select' }">
           <ion-select-option *ngFor="let scoringTile of allScoringTiles" [value]="scoringTile">
             <div>
               <p>
@@ -127,7 +130,7 @@
           </ion-note>
         </div>
         <ion-select name="extraFinalScoringTiles" [(ngModel)]="extraFinalScoringTiles" slot="end" selectedText="&nbsp;"
-          multiple="true">
+          multiple="true" [interfaceOptions]="{ cssClass: 'grid-select' }">
           <ion-select-option *ngFor="let extraFinalScoringTile of allExtraFinalScoringTiles"
             [value]="extraFinalScoringTile" translate>{{extraFinalScoringTile.name}}
           </ion-select-option>
