--- a/src/app/pages/new-game/new-game.page.html
+++ b/src/app/pages/new-game/new-game.page.html
@@ -106,7 +106,7 @@
                 <ion-text translate>{{scoringTile.actionPhaseScoring}}</ion-text>
               </p>
               <p>
-                <ion-text translate><strong>end-round-reward</strong></ion-text>
+                <ion-text><strong translate>end-round-reward</strong></ion-text>
                 <ion-text translate [translateParams]="{ count: scoringTile.endRoundRewardConditionCount}">
                   {{scoringTile.endRoundRewardCondition}}</ion-text>
                 <ion-text translate [translateParams]="{ count: scoringTile.endRoundRewardCount}">
