--- a/src/app/pages/new-game/new-game.page.scss
+++ b/src/app/pages/new-game/new-game.page.scss
@@ -9,3 +9,8 @@ ion-range.range-has-pin {
 ion-item.item-label-stacked ion-label {
   flex: auto;
 }
+
+.single-line-radio {
+  display: flex;
+  flex-wrap: wrap;
+}
