--- a/src/app/pages/new-game/scoring-tiles/scoring-tiles.page.html
+++ b/src/app/pages/new-game/scoring-tiles/scoring-tiles.page.html
@@ -31,7 +31,7 @@
           </p>
         </div>
       </ion-label>
-      <ion-checkbox [(ngModel)]="scoringTileSelected[i]"></ion-checkbox>
+      <ion-checkbox [(ngModel)]="scoringTilesChecked[i]"></ion-checkbox>
     </ion-item>
   </ion-list>
 </ion-content>
