--- a/src/app/pages/new-game/game-setup/game-setup.page.html
+++ b/src/app/pages/new-game/game-setup/game-setup.page.html
@@ -87,7 +87,7 @@
         </ion-text>
       </div>
 
-      <ion-item routerLink="scoring-tiles" [state]="{ scoringTiles: scoringTiles }">
+      <ion-item routerLink="scoring-tiles" [state]="{ scoringTilesGuard: true }">
         <div>
           <ion-label translate>scoring-tiles</ion-label>
           <ion-note translate [translateParams]="{ num: scoringTiles.length }">scoring-tiles-description</ion-note>
