--- a/src/app/pages/new-game/game-setup/game-setup.page.html
+++ b/src/app/pages/new-game/game-setup/game-setup.page.html
@@ -1,12 +1,3 @@
-<ion-header translucent>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title translate>new-game</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content fullscreen>
   <ion-header collapse="condense">
     <ion-toolbar>
@@ -18,9 +9,10 @@
     <ion-item>
       <div>
         <ion-label translate>profile</ion-label>
-        <ion-note>{{baseProfile.predefined ? (baseProfile.name | translate) : baseProfile.name}}</ion-note>
+        <ion-note>{{setup.baseProfile.predefined ? (setup.baseProfile.name | translate) : setup.baseProfile.name}}
+        </ion-note>
       </div>
-      <ion-select [(ngModel)]="baseProfile" (ionChange)="onProfileChange()" slot="end"
+      <ion-select [(ngModel)]="setup.baseProfile" (ionChange)="onProfileChange()" slot="end"
         [interfaceOptions]="{ cssClass: 'wide-select' }">
         <ion-select-option *ngFor="let profile of allProfiles" [value]="profile">
           {{profile.predefined ? (profile.name | translate) : profile.name}}
@@ -29,7 +21,7 @@
     </ion-item>
 
     <form #form="ngForm">
-      <ion-radio-group name="numPlayers" [(ngModel)]="numPlayers" (ionChange)="onNumPlayersChange()">
+      <ion-radio-group name="numPlayers" [(ngModel)]="setup.numPlayers" (ionChange)="onNumPlayersChange()">
         <ion-item lines="none">
           <ion-label style="min-width: 140px;" translate>number-of-players</ion-label>
           <div class="single-line-radio">
@@ -44,10 +36,10 @@
       <ion-item>
         <div>
           <ion-label translate>factions</ion-label>
-          <ion-note translate [translateParams]="{ num: factions.length }">factions-description</ion-note>
+          <ion-note translate [translateParams]="{ num: setup.factions.length }">factions-description</ion-note>
         </div>
-        <ion-select name="factions" [(ngModel)]="factions" (ionChange)="onFactionsChange()" slot="end" multiple
-          appFactionsValidator [numPlayers]="numPlayers" #factionsSelect="ngModel">
+        <ion-select name="factions" [(ngModel)]="setup.factions" (ionChange)="onFactionsChange()" slot="end" multiple
+          appFactionsValidator [numPlayers]="setup.numPlayers" #factionsSelect="ngModel">
           <ion-select-option *ngFor="let faction of allFactions" [value]="faction" translate>
             {{faction.name}}
           </ion-select-option>
@@ -61,21 +53,21 @@
       <ion-item class="item-label-stacked">
         <div>
           <ion-label translate>number-of-factions</ion-label>
-          <ion-note translate [translateParams]="{ num: numFactions }">number-of-factions-description</ion-note>
+          <ion-note translate [translateParams]="{ num: setup.numFactions }">number-of-factions-description</ion-note>
         </div>
-        <ion-range name="numFactions" [(ngModel)]="numFactions" pin snaps ticks [min]="numPlayers"
-          [max]="maxNumFactions <= numPlayers ? numPlayers + 1 : maxNumFactions"
-          [disabled]="maxNumFactions <= numPlayers">
+        <ion-range name="numFactions" [(ngModel)]="setup.numFactions" pin snaps ticks [min]="setup.numPlayers"
+          [max]="maxNumFactions <= setup.numPlayers ? setup.numPlayers + 1 : maxNumFactions"
+          [disabled]="maxNumFactions <= setup.numPlayers">
         </ion-range>
       </ion-item>
 
       <ion-item>
         <div>
           <ion-label translate>bonus-cards</ion-label>
-          <ion-note translate [translateParams]="{ num: bonusCards.length }">bonus-cards-description</ion-note>
+          <ion-note translate [translateParams]="{ num: setup.bonusCards.length }">bonus-cards-description</ion-note>
         </div>
-        <ion-select name="bonusCards" [(ngModel)]="bonusCards" slot="end" multiple appBonusCardsValidator
-          [numPlayers]="numPlayers" #bonusCardsSelect="ngModel">
+        <ion-select name="bonusCards" [(ngModel)]="setup.bonusCards" slot="end" multiple appBonusCardsValidator
+          [numPlayers]="setup.numPlayers" #bonusCardsSelect="ngModel">
           <ion-select-option *ngFor="let bonusCard of allBonusCards" [value]="bonusCard" translate>
             {{bonusCard.description}}
           </ion-select-option>
@@ -87,12 +79,13 @@
         </ion-text>
       </div>
 
-      <ion-item routerLink="scoring-tiles" [state]="{ scoringTilesGuard: true }">
+      <ion-item routerLink="scoring-tiles">
         <div>
           <ion-label translate>scoring-tiles</ion-label>
-          <ion-note translate [translateParams]="{ num: scoringTiles.length }">scoring-tiles-description</ion-note>
+          <ion-note translate [translateParams]="{ num: setup.scoringTiles.length }">scoring-tiles-description
+          </ion-note>
         </div>
-        <input type="hidden" name="scoringTiles" [(ngModel)]="scoringTiles" appScoringTilesValidator
+        <input type="hidden" name="scoringTiles" [(ngModel)]="setup.scoringTiles" appScoringTilesValidator
           [allowCityScoring1stRound]="true" #scoringTilesSelect="ngModel">
       </ion-item>
       <div class="ion-padding-horizontal ion-padding-bottom">
@@ -104,11 +97,11 @@
       <ion-item>
         <div>
           <ion-label translate>extra-final-scoring-tiles</ion-label>
-          <ion-note translate [translateParams]="{ num: extraFinalScoringTiles.length }">
+          <ion-note translate [translateParams]="{ num: setup.extraFinalScoringTiles.length }">
             extra-final-scoring-tiles-description
           </ion-note>
         </div>
-        <ion-select name="extraFinalScoringTiles" [(ngModel)]="extraFinalScoringTiles" slot="end" multiple>
+        <ion-select name="extraFinalScoringTiles" [(ngModel)]="setup.extraFinalScoringTiles" slot="end" multiple>
           <ion-select-option *ngFor="let extraFinalScoringTile of allExtraFinalScoringTiles"
             [value]="extraFinalScoringTile" translate>{{extraFinalScoringTile.name}}
           </ion-select-option>
