--- a/src/app/pages/new-game/game-setup/game-setup.page.html
+++ b/src/app/pages/new-game/game-setup/game-setup.page.html
@@ -1,3 +1,12 @@
+<ion-header translucent>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title translate>new-game</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content fullscreen>
 
   <ion-list>
