--- a/src/app/shared/pages/grid-selection/grid-selection.page.html
+++ b/src/app/shared/pages/grid-selection/grid-selection.page.html
@@ -12,7 +12,7 @@
     <ion-item *ngFor="let item of allItems; let i = index">
       <ng-container *ngTemplateOutlet="itemTemplate; context: { item: item }"></ng-container>
       <ng-container *ngIf="!itemTemplate">
-        <ion-label translate>{{item.getDescription()}}</ion-label>
+        <ion-label translate>{{item.getName()}}</ion-label>
       </ng-container>
       <ion-checkbox [(ngModel)]="listSelected[i]"></ion-checkbox>
     </ion-item>
