Pick scoring tiles

--- a/src/app/pages/new-game/new-game.page.html
+++ b/src/app/pages/new-game/new-game.page.html
@@ -82,7 +82,7 @@
           </ion-note>
         </div>
         <input type="hidden" name="scoringTiles" [(ngModel)]="setup.scoringTiles" appScoringTilesValidator
-          [allowCityScoring1stRound]="true" #scoringTilesSelect="ngModel">
+          [allowCityScoring1stRound]="setup.allowCityScoring1stRound" #scoringTilesSelect="ngModel">
       </ion-item>
       <div class="ion-padding-horizontal ion-padding-bottom">
         <ion-text *ngIf="scoringTilesSelect.errors?.invalidScoringTiles" color="danger" translate>
@@ -151,8 +151,11 @@
       <ion-item-divider>
         <ion-label translate>scoring-tiles</ion-label>
       </ion-item-divider>
-      <ion-row>
-        <ion-col *ngFor="let scoringTile of pickedScoringTiles">
+      <ion-row *ngFor="let scoringTile of pickedScoringTiles; let i = index">
+        <ion-col size="auto">
+          <ion-label translate [translateParams]="{ num: i }">round-num</ion-label>
+        </ion-col>
+        <ion-col>
           <ion-item>
             <ng-container *ngTemplateOutlet="scoringTileTemplate; context: { item: scoringTile }"></ng-container>
           </ion-item>
